Second Commit: Create html,class,id in window

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title>DOM-inator</title>
 </head>
 <body >
+    
+    
         <div class="w3-sidebar w3-bar-block w3-animate-left" style="display:none" id="mySidebar">
                 <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
                 <a href="http://westada.tech/b2/perryk" class="w3-bar-item w3-button">Perry K</a>
@@ -39,6 +41,8 @@
             </div>
         </div>
     </div>
+    <hr class="my-4">
+    <div id="page"></div>
     <script src="js/dom.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
